prevent the title from overflowing over the donate button

--- a/public/stylesheets/sass/layout.sass
+++ b/public/stylesheets/sass/layout.sass
@@ -40,6 +40,7 @@ h1
   font-weight: 700
   margin-top: 1.5rem
   padding-bottom: 7px
+  padding-right: 74px // width of the donate button
 
 h2
   font-size: 1.5rem
@@ -141,7 +142,7 @@ ol li
 @media screen and (min-width: $width)
   .donate
     float: right
-    margin-top: -3.5rem
+    margin-top: -3rem
 
   .downloads
     @include align-items(stretch)
